# mini-comp-DSR

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Notebook/: H_test.ipynb  H_test2.ipynb  H_test3.ipynb
functions/: __init__.py  features.py  model_OLS.py  model_train.py  preproc.py  preprocessing.py
